Issue #16309: Make PYTHONPATH= behavior the same as if PYTHONPATH not set at all.

Thanks to Armin Rigo and Alexey Kachayev.